<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Linear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:orientation="vertical"
    tools:context=".AddContact">

    <EditText
        android:id="@+id/inputName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        android:textColorHighlight="@color/colorAccent"
        tools:layout_editor_absoluteY="24dp" />

    <EditText
        android:id="@+id/inputPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/hint_phonenumber"
        android:inputType="textPersonName|phone"
        android:textColorHighlight="@color/colorAccent"
        tools:layout_editor_absoluteY="24dp" />

    <EditText
        android:id="@+id/inputWeb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:autoLink="web"
        android:ems="10"
        android:hint="@string/hint_website"
        android:inputType="textUri|textWebEditText|textPersonName"
        android:textColorHighlight="@android:color/holo_orange_light"
        android:textColorLink="#E91E63"
        tools:layout_editor_absoluteY="24dp" />

    <EditText
        android:id="@+id/inputAddr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/hint_address"
        android:inputType="textPersonName"
        android:textColorHighlight="@color/colorAccent"
        tools:layout_editor_absoluteY="24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/smile"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="auto"
            app:srcCompat="@drawable/emoji_smile" />

        <ImageView
            android:id="@+id/norm"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="auto"
            app:srcCompat="@drawable/emoji_normal" />

        <ImageView
            android:id="@+id/angry"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="auto"
            app:srcCompat="@drawable/emoji_angry" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorAccent"
        android:text="@string/submit"
        android:textColor="@color/colorText"
        android:textStyle="bold" />

</LinearLayout>